Fix User headline misalignment

--- a/themes/climatecolab-theme/src/main/webapp/css/style/components/_blueheaderbar.scss
+++ b/themes/climatecolab-theme/src/main/webapp/css/style/components/_blueheaderbar.scss
@@ -158,6 +158,7 @@ thead.blueheaderbar {
 .blueheaderbar .user a {
   font-weight: bold;
   padding-top: 10px;
+  margin-left: 10px;
   height: 27px;
   display: inline-block;
 }
